--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,6 @@ on:
 jobs:
   run-selenoid-tests:
     runs-on: python:3.11-slim # ubuntu-latest # slim
-
     steps:
       - name: Check out repository code  
         uses: actions/checkout@v3 
@@ -14,4 +13,4 @@ jobs:
 #       - name: Pull selenoid image
 #        run: docker pull selenoid/chrome:128.0
       - name: Run tests in docker
-        run: docker compose up --build --exit-code-from webtest
+        run: docker compose up --build --exit-code-from test
