--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,16 @@ jobs:
     runs-on: ubuntu-latest #  python:3.11-slim # selenoid/chrome:128.0
 
     steps:
-      - name: Check out repository code  
-        uses: actions/checkout@v3 
+      - name: Check out repository code
+        uses: actions/checkout@v3
+
+# Ошибка pull access denied for test, repository does not exist
+#       - name: Log in to Docker Hub
+#         uses: docker/login-action@v2
+#         with:
+#           username: ${{ secrets.DOCKER_USERNAME }}
+#           password: ${{ secrets.DOCKER_PASSWORD }}
+
       # Вставим вторым шагом скачивание нужного контейнера
 #       - name: Pull selenoid image
 #        run: docker pull selenoid/chrome:128.0
